level_omega/css/level.css
/* ... */
.view-director-profile .views-row {
	border: none !important;
	padding: 0;
}

.view-director-profile .views-row .views-field{
  margin-top: 5px;
  font-size: 0.9em
}

.view-director-profile .views-row .field-content{
  color: #000;
  font-weight: bold;
}

.view-director-profile .views-row .views-field-phpcode-2,
.view-director-profile .views-row .views-field-phpcode-3,
.view-director-profile .views-row .views-field-phpcode-4,
.view-director-profile .views-row .views-field-nationality
{
  display: none;
}

/* Show the first occurance of  DOB, age, nationality */
.view-director-profile .views-row-1 .views-field-phpcode-2,
.view-director-profile .views-row-1 .views-field-phpcode-3,
.view-director-profile .views-row-1 .views-field-phpcode-4,
.view-director-profile .views-row-1 .views-field-nationality
{
	display: block;
}

.view-director-profile .views-row .views-field-phpcode-4
{
	margin: 10px 0;
	clear:both;
}

.view-director-profile .views-field-phpcode {
	/* company name */
}

.view-director-profile .views-field-phpcode h4 {
  padding: 5px 0;
  border-top: 1px solid #999;
  border-bottom: 1px solid #999;
  font-size: 1.2em;
}

.view-director-profile .views-field-appointment-type {
}

.view-director-profile .views-field-phpcode-1 {
	/* appointment date */
}

.view-director-profile .views-field-appointment-type .views-label-appointment-type,
.view-director-profile .views-field-phpcode-1 .views-label-phpcode-1,
.view-director-profile .views-field-occupation .views-label-occupation
{
	float: left;
  width: 210px;
}

.company-not-live
{
	color: #999;
}

.director-profile-personal-info-box {
	float: left;
	width: 210px;
	margin-bottom: 20px;
}

/* Non XMLGW Director search results */
.view-id-director_search, 
.view-id-director_search .item-list
{
  margin-top: 10px;
}

#main-content .view-id-director_search .view-content .views-row {
  border: 0;
}

#main-content .view-id-director_search .view-content .views-row-last {
  border-bottom: 1px solid #999390;
}

.view-id-director_search h3 {
  font-size: 1.6em;
  padding: 0.4em 0;
}

.view-id-director_search .views-field {
  font-size: 0.9em;
}

